--- a/src/Results.css
+++ b/src/Results.css
@@ -11,7 +11,7 @@
   color: rgb(242, 242, 247);
   font-weight: 600;
   text-shadow: 4px 5px 24px rgba(31, 31, 78, 0.589);
-  text-align: left;
+  text-align: start;
 }
 
 .Results hr {
